plan create by user
